fix: remove redundant pages

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
     }
 
     location = /contact {
-      try_files /contact-v2.html =404;
+      try_files /contact.html =404;
     }
 
     location = /doc/derisk {
